add service file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<h1>Angular Lifecycle Demo</h1>
-<app-demo></app-demo>
+<p  style="color: brown; font-style: italic; font-size: larger;font-size: 50px;">{{ message }}</p>
